--- a/src/App.module.css
+++ b/src/App.module.css
@@ -30,11 +30,13 @@
   grid-template-rows: repeat(3, auto);
 }
 .quoteTitle {
+  width: 520px;
   font-size: 40px;
   color: #fff;
 }
 
 .quoteStyle {
+  width: 584px;
   padding-top: 24px;
   font-size: 18px;
   color: #fff;
@@ -146,8 +148,6 @@
 }
 
 .registrationArea {
-  width: 100%;
-  height: 48px;
   padding-top: 74px;
   padding-bottom: 64px;
 }
@@ -192,4 +192,201 @@
   grid-template-rows: repeat(3, auto);
   grid-gap: 40px;
   justify-items: center;
+}
+
+@media screen and (max-width: 420px) {
+  .appContainer {
+    width: 328px;
+    height: 100%;
+  }
+  .separatorSection {
+    width: 328px;
+  }
+  .introBG {
+    height: 540px;
+    background: url("./assets/mobile_bg.png") no-repeat center,
+      linear-gradient(314.72deg, #c86dd7 -1.5%, #7e49c3 39.43%, #5912ac 86.02%);
+  }
+  .introAdArea {
+    display: grid;
+    grid-template-columns: auto;
+    grid-gap: 0;
+  }
+  .quoteArea {
+    grid-template-rows: auto;
+    padding-top: 0;
+    height: auto;
+    padding-top: 0;
+    margin-top: 152px;
+    justify-items: center;
+  }
+  .quoteTitle {
+    font-weight: normal;
+    width: 272px;
+    height: 96px;
+    text-align: center;
+    font-size: 28px;
+  }
+  .quoteStyle {
+    font-weight: normal;
+
+    width: auto;
+    height: 84px;
+    padding: 0;
+    margin-top: 16px;
+    font-size: 16px;
+    text-align: center;
+    line-height: 28px;
+  }
+  .buttonArea {
+    padding-top: 0;
+    margin-top: 66px;
+  }
+  .buttonPhrase {
+    font-size: 16px;
+  }
+  .serviceArea {
+    display: none;
+  }
+  .memberNannyArea {
+    height: 152px;
+    justify-content: center;
+    justify-items: center;
+    padding-left: 0;
+    margin-top: 32px;
+    margin-bottom: 32px;
+    grid-template-columns: auto;
+    grid-template-rows: repeat(2, auto);
+  }
+  .pContainerNanny {
+    font-size: 16px;
+    text-align: center;
+    display: grid;
+    grid-template-rows: repeat(2, auto);
+    justify-items: center;
+    grid-gap: 12px;
+  }
+  .linkStyle {
+    font-size: 16px;
+
+    border: none;
+  }
+  .memberBStyle {
+    width: 212px;
+  }
+  .nannyBStyle {
+    font-size: 14px;
+  }
+  .fetchNannyArea {
+    padding: 64px 0 0 0;
+
+    grid-template-columns: auto;
+    grid-template-rows: repeat(2, auto);
+    justify-items: center;
+  }
+  .nannyMap {
+    grid-area: 1;
+    width: auto;
+    height: auto;
+  }
+  .serviceExempleArea {
+    display: grid;
+    grid-template-rows: repeat(3, auto);
+    justify-items: center;
+    margin-bottom: 64px;
+  }
+  .titleStyle {
+    margin-top: 24px;
+    margin-bottom: 16px;
+    font-weight: normal;
+    font-size: 22px;
+    line-height: 32px;
+    text-align: center;
+  }
+  .pStyle {
+    text-align: center;
+    height: auto;
+    width: auto;
+    padding: 0;
+    margin-bottom: 24px;
+  }
+  .imgFetchNanny {
+    width: 304px;
+    height: 204px;
+  }
+  .emailSection {
+    padding-top: 64px;
+    padding-bottom: 64px;
+  }
+  .h1EmailStyle {
+    padding: 0;
+    width: 328px;
+    font-size: 22px;
+    font-weight: normal;
+    text-align: center;
+  }
+  .pEmailStyle {
+    text-align: center;
+    width: auto;
+    font-size: 16px;
+    line-height: 28px;
+    padding: 0;
+    margin-top: 16px;
+    margin-bottom: 32px;
+  }
+  .registrationArea {
+    padding: 0;
+  }
+  .budgetArea {
+    padding: 64px 0;
+    grid-template-columns: auto;
+    grid-template-rows: repeat(2, auto);
+    justify-items: center;
+    grid-row-gap: 40px;
+  }
+  .budgetSystem {
+    width: 312px;
+    height: 230px;
+  }
+  .mobileContainer {
+    display: grid;
+    grid-template-rows: repeat(2, auto);
+    justify-items: center;
+  }
+  .titleMobileStyle {
+    margin: 0;
+    margin-bottom: 16px;
+    text-align: center;
+    width: 226px;
+    height: 64px;
+  }
+
+  .budgetSpanMobile {
+    text-align: center;
+  }
+  .operationArea {
+    padding: 64px 0;
+    grid-gap: 0;
+  }
+  .titleOperationMobile {
+    margin: 0;
+  }
+  .operationP {
+    width: auto;
+    margin: 16px 0 24px 0;
+  }
+  .operationSpanMobile {
+    width: 310px;
+    text-align: center;
+  }
+  .nannyHistoricArea {
+    display: none;
+  }
+  .newsSectionArea {
+    padding: 64px 0;
+    grid-gap: 0;
+  }
+  .sectionPMobile {
+    margin: 0;
+  }
 }
