--- a/src/components/button/style.module.css
+++ b/src/components/button/style.module.css
@@ -1,8 +1,17 @@
 .headerButton {
+  display: grid;
+  justify-items: center;
   background: #00a870;
-  padding: 12px 21px;
+
   border-radius: 4px;
   border: none;
   color: #fff;
   cursor: pointer;
+}
+
+@media screen and (max-width: 420px) {
+  .headerButton {
+    padding: 12px 21px;
+    width: 234px;
+  }
 }
