--- a/src/App.module.css
+++ b/src/App.module.css
@@ -259,7 +259,8 @@
     grid-template-rows: repeat(2, auto);
   }
   .pContainerNanny {
-    font-size: 16px;
+    font-size: 14px;
+    font-weight: bold;
     text-align: center;
     display: grid;
     grid-template-rows: repeat(2, auto);
@@ -268,15 +269,13 @@
   }
   .linkStyle {
     font-size: 16px;
-
     border: none;
   }
   .memberBStyle {
+    font-size: 16px;
     width: 212px;
   }
-  .nannyBStyle {
-    font-size: 14px;
-  }
+
   .fetchNannyArea {
     padding: 64px 0 0 0;
 
